src/components/Banner/Banner.css
.banner {
  margin-top: 0;
  padding: 260px 0 100px 0;
  background: linear-gradient(135deg, #1c1c3c, #2a2a58); /* Matching gradient */
  color: #ffffff;
}

.flex {
  display: flex;
  justify-content: center;
  align-items: center;
}

.banner .tagline {
  font-weight: 700;
  letter-spacing: 0.8px;
  padding: 8px 10px;
  background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%);
  border: 1px solid rgba(255, 255, 255, 0.5);
  font-size: 20px;
  margin-bottom: 16px;
  display: inline-block;
}

.banner h1 {
  font-size: 30px;
  font-weight: 700;
  letter-spacing: 0.8px;
  line-height: 1;
  display: block;
}

.banner p {
  color: #B8B8B8;
  font-size: 14px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  width: 96%;
}

@media (min-width: 768px) {
  .banner h1 {
    font-size: 50px;
  }
  .banner p {
    font-size: 20px;
  }
}

.banner button {
  color: #fff;
  font-weight: 700;
  font-size: 20px;
  margin-top: 60px;
  letter-spacing: 0.8px;
  display: flex;
  align-items: center;
}

.banner button svg {
  font-size: 25px;
  margin-left: 10px;
  transition: 0.3s ease-in-out;
  line-height: 1;
}

.banner button:hover svg {
  margin-left: 25px;
}

@media (min-width: 768px) {
  .banner img {
    margin-top: -20px;
    margin-left: 50px;
    border-radius: 50%;
    height: 350px;
    width: 350px;
  }

  .banner h1 {
    font-size: 50px;
    margin-bottom: 20px;
  }

  .banner button svg {
    font-size: 30px;
  }
}

/* ipad view */
@media (max-width: 1120px) {
  .banner img {
    margin-top: 20px;
    margin-left: -45px;
    border-radius: 50%;
    height: 300px;
    width: 300px;
  }

  .banner h1 {
    font-size: 40px;
    margin-bottom: 20px;
  }

  .txt-rotate > .wrap {
    border-right: 0.08em solid #666;
  }
}

.banner img {
  margin-top: 20px;
  margin-left: -45px;
  border-radius: 50%;
  height: 300px;
  width: 300px;
}

.txt-rotate > .wrap {
  border-right: 0.08em solid #666;
}

